--- a/1_KoneCafe/assets/css/style-tr.css
+++ b/1_KoneCafe/assets/css/style-tr.css
@@ -22,7 +22,7 @@ a:hover {
   font-size: 40px;
   font-weight: 100;
   padding: 0 200px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 .description a {
   color: #ffce5e;
@@ -31,29 +31,57 @@ a:hover {
 .element_content {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 .element_content .item {
   width: 48%;
   overflow: hidden;
-  margin: 40px 0;
+  text-align: center;
+  position: relative;
+}
+.element_content .item {
+  display: block;
+  width: 48%;
+  height: 100%;
+  height: 430px;
+  overflow: hidden;
+  margin-top: 50px;
+}
+.element_content .item:hover img {
+  transform: scale(1.2);
+}
+.element_content .item .title_link {
+  position: absolute;
+  content: '';
+  color: #fff;
+  text-transform: uppercase;
+  top: 30px;
+  left: 30px;
+  width: 30px;
+  font-size: 20px;
+  padding-left: 10px;
+  border-left: 2px solid #fff;
+}
+.element_content .item .flour {
+  position: absolute;
+  content: '';
+  color: #fff;
+  text-transform: capitalize;
+  top: 30px;
+  right: 30px;
+  font-size: 20px;
+  border-bottom: 1px solid #fff;
 }
 .element_content .item img {
-  max-width: 100%;
-  height: auto;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+  transition: 0.5s;
 }
-.element_content .item:nth-child(2n+2) {
-  margin-left: auto;
+.element_content .item.video iframe {
+  height: 100%;
 }
-.element_content .item .text {
-  text-align: left;
-}
-.element_content .item .text p {
-  font-size: 40px;
-  font-family: EBGaramond-Regular;
-}
-
 .section_follow_us {
   background: #f1f1f1;
   padding: 115px 0 100px 0;
@@ -89,8 +117,8 @@ a:hover {
 }
 .gallery_product .list-inline .blogBox {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 32%;
+  height: 350px;
   overflow: hidden;
   padding: 0;
   border-radius: 0;
@@ -301,6 +329,7 @@ a:hover {
 }
 .element_fixed_left .icon_menu {
   margin: auto;
+  margin-top: 30px;
 }
 .element_fixed_left .icon_menu span {
   display: block;
@@ -375,6 +404,9 @@ a:hover {
 .element_fixed_right .icon_link a {
   width: 100%;
 }
+.element_fixed_right .icon_link a:active {
+  box-shadow: none;
+}
 .element_fixed_right .icon_link a img {
   width: 14px;
 }
@@ -419,7 +451,7 @@ a:hover {
 .section_menu {
   width: 100%;
   background: #ffcb53;
-  padding: 66px 100px;
+  padding: 30px 50px;
   position: fixed;
   top: -100%;
   left: 0;
@@ -470,6 +502,7 @@ a:hover {
 }
 .section_menu .close_menu span:nth-child(1) {
   transform: rotateZ(45deg);
+  margin-top: 22px;
 }
 .section_menu .close_menu span:nth-child(2) {
   transform: rotateZ(-45deg);
@@ -720,24 +753,70 @@ a:hover {
   padding-bottom: 20px;
   margin-top: 100px;
 }
+.title_basic span {
+  display: block;
+  font-size: 16px;
+  color: #000;
+  margin-top: 20px;
+}
 .title_basic:before {
   position: absolute;
   content: "";
   background: #000;
   width: 5%;
   height: 1px;
-  bottom: 0;
+  bottom: 50%;
   left: 50%;
   transform: translate(-50%, 0);
 }
 
 .item_menu {
-  width: 50%;
+  width: 32%;
   text-align: center;
+  margin-top: 30px;
+  padding: 5px;
+}
+.item_menu:hover .img_menu_pro img {
+  transform: scale(1.2);
+}
+.item_menu.hot_pro .img_menu_pro {
+  border: 3px solid #ffcb53;
+  position: relative;
+}
+.item_menu.hot_pro .img_menu_pro:before {
+  position: absolute;
+  content: url(./../img/starbg.png);
+  top: -3px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+.item_menu .img_menu_pro {
+  display: block;
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+  padding: 10px;
+}
+.item_menu .img_menu_pro img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
 }
 .item_menu .name_pro {
   font: normal normal bold 16px/1.5em avenir-lt-w01_85-heavy1475544, sans-serif;
   color: black;
+  position: relative;
+}
+.item_menu .name_pro:before {
+  position: absolute;
+  content: '';
+  width: 50%;
+  height: 2px;
+  bottom: -10px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background-color: #000;
 }
 .item_menu .name_pro_star {
   position: relative;
@@ -753,8 +832,8 @@ a:hover {
   color: black;
   line-height: 1.6;
   margin-top: 12px;
-  margin-bottom: 25px;
-  padding: 0 120px;
+  margin-bottom: 0px;
+  padding: 0 15px;
 }
 .item_menu .price p {
   font: italic normal normal 19px/1.5em cormorantgaramond-light;
@@ -777,7 +856,7 @@ a:hover {
 .element_menu {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-between;
 }
 .element_menu:last-child {
   margin-bottom: 100px;
